Sending translation for Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-14 17:10-0500\n"
-"PO-Revision-Date: 2009-12-31 14:36+0200\n"
+"PO-Revision-Date: 2010-01-02 15:03+0200\n"
 "Last-Translator:  <>\n"
 "Language-Team:  <>\n"
 "MIME-Version: 1.0\n"
@@ -25,11 +25,11 @@ msgstr "Управление виртуальными машинами"
 #: ../src/virt-manager.desktop.in.in.h:2 ../src/virtManager/systray.py:108
 #: ../src/vmm-manager.glade.h:8
 msgid "Virtual Machine Manager"
-msgstr "Менеджер Виртуальными Машинами"
+msgstr "Менеджер Виртуальных Машин"
 
 #: ../src/virt-manager.py.in:57
 msgid "Error starting Virtual Machine Manager"
-msgstr "Ошибка запуска Менеджера Виртуальными Машинами"
+msgstr "Ошибка запуска Менеджера Виртуальных Машин"
 
 #. ...the risk is we catch too much though
 #. Damned if we do, damned if we dont :-)(
@@ -991,7 +991,7 @@ msgstr "PXE установка"
 
 #: ../src/virtManager/create.py:681 ../src/virtManager/details.py:1299
 msgid "None"
-msgstr ""
+msgstr "Ничего"
 
 #: ../src/virtManager/create.py:1038
 #, python-format
@@ -1096,7 +1096,7 @@ msgstr "NAT"
 
 #: ../src/virtManager/createnet.py:121
 msgid "Routed"
-msgstr "Маршрутизируются"
+msgstr "Маршрутизировать"
 
 #: ../src/virtManager/createnet.py:182
 #, python-format
@@ -1507,7 +1507,7 @@ msgstr ""
 
 #: ../src/virtManager/details.py:1581
 msgid "Automatically allocated"
-msgstr "Автоматический выделяется"
+msgstr "Автоматическое определение"
 
 #: ../src/virtManager/details.py:1620
 msgid "Primary Console"
@@ -1717,9 +1717,8 @@ msgstr ""
 
 #: ../src/virtManager/host.py:342 ../src/virtManager/host.py:391
 #: ../src/virtManager/host.py:578 ../src/virtManager/host.py:603
-#, fuzzy
 msgid "On Boot"
-msgstr "При загрузке"
+msgstr "При Загрузке"
 
 #: ../src/virtManager/host.py:343 ../src/virtManager/host.py:391
 #: ../src/virtManager/host.py:426 ../src/virtManager/host.py:579
@@ -2733,7 +2732,7 @@ msgstr "<b>Имя</b> вашей новой виртуальной сети"
 
 #: ../src/vmm-create-net.glade.h:15
 msgid "Broadcast:"
-msgstr ""
+msgstr "Широковещательный:"
 
 #: ../src/vmm-create-net.glade.h:16
 msgid "Complete"
@@ -2752,9 +2751,8 @@ msgid "DHCP"
 msgstr "DHCP"
 
 #: ../src/vmm-create-net.glade.h:20
-#, fuzzy
 msgid "E_nd:"
-msgstr "Конец:"
+msgstr "К_онец:"
 
 #: ../src/vmm-create-net.glade.h:21
 #, fuzzy
@@ -2766,9 +2764,8 @@ msgid "End address:"
 msgstr "Конечный адрес:"
 
 #: ../src/vmm-create-net.glade.h:23
-#, fuzzy
 msgid "For_warding to physical network"
-msgstr "Перенаправление на физическую сеть"
+msgstr "Перенаправлять на физическое сетевое устройство"
 
 #: ../src/vmm-create-net.glade.h:24
 msgid "Forwarding"
@@ -2878,16 +2875,14 @@ msgstr ""
 "Вам понадобится выбрать адресное пространство IPv4 для виртуальной сети:"
 
 #: ../src/vmm-create-net.glade.h:50
-#, fuzzy
 msgid "_Destination:"
-msgstr "Назначение:"
+msgstr "_Назначение:"
 
 #: ../src/vmm-create-net.glade.h:51
 msgid "_Enable DHCP:"
 msgstr "_Включить DHCP:"
 
 #: ../src/vmm-create-net.glade.h:53
-#, fuzzy
 msgid "_Isolated virtual network"
 msgstr "_Изолированная виртуальная сеть"
 
@@ -2945,9 +2940,8 @@ msgstr "Шаг 2 из 2"
 
 #: ../src/vmm-create-pool.glade.h:14 ../src/vmm-create-vol.glade.h:24
 #: ../src/vmm-create.glade.h:50
-#, fuzzy
 msgid "_Name:"
-msgstr "_Имя:"
+msgstr "_Название:"
 
 #: ../src/vmm-create-pool.glade.h:15
 #, fuzzy
@@ -3008,13 +3002,13 @@ msgid "_Format:"
 msgstr "_Формат:"
 
 #: ../src/vmm-create-vol.glade.h:25
-#, fuzzy
 msgid "available space:"
-msgstr "Недоступно"
+msgstr "доступное пространство:"
 
 #: ../src/vmm-create.glade.h:1
+#, fuzzy
 msgid "(Insert host mem)"
-msgstr ""
+msgstr "(Insert host mem)"
 
 #: ../src/vmm-create.glade.h:2
 msgid "<span color='#484848'>CPUs:</span>"
@@ -3043,7 +3037,7 @@ msgstr ""
 #: ../src/vmm-create.glade.h:9 ../src/vmm-migrate.glade.h:6
 #, fuzzy
 msgid "Advanced options"
-msgstr "Тип соединения:"
+msgstr "Дополнительные параметры"
 
 #: ../src/vmm-create.glade.h:10
 #, fuzzy
@@ -3061,9 +3055,8 @@ msgid "C_PUs:"
 msgstr "VCPU"
 
 #: ../src/vmm-create.glade.h:13
-#, fuzzy
 msgid "C_onnection:"
-msgstr "Тип соединения:"
+msgstr "П_одключение:"
 
 #: ../src/vmm-create.glade.h:14
 msgid "C_reate a disk image on the computer's hard drive"
@@ -3093,23 +3086,20 @@ msgid "Error message"
 msgstr ""
 
 #: ../src/vmm-create.glade.h:20
-#, fuzzy
 msgid "Finish"
-msgstr "_Завершить"
+msgstr "Завершить"
 
 #: ../src/vmm-create.glade.h:21
 msgid "ISO"
 msgstr "ISO"
 
 #: ../src/vmm-create.glade.h:22
-#, fuzzy
 msgid "Install"
-msgstr "PVinstall"
+msgstr "Установка"
 
 #: ../src/vmm-create.glade.h:23
-#, fuzzy
 msgid "Kernel options:"
-msgstr "Тип соединения:"
+msgstr "Параметры ядра:"
 
 #: ../src/vmm-create.glade.h:24
 #, fuzzy
@@ -3126,21 +3116,18 @@ msgid "Memory"
 msgstr "Память"
 
 #: ../src/vmm-create.glade.h:29
-#, fuzzy
 msgid "Network _Boot (PXE)"
-msgstr "_Сеть:"
+msgstr "Сетевая _Загрузка (PXE)"
 
 #: ../src/vmm-create.glade.h:30
 msgid "Network _Install (HTTP, FTP, or NFS)"
-msgstr ""
+msgstr "Сетевая _Установка (HTTP, FTP или NFS)"
 
 #: ../src/vmm-create.glade.h:31
-#, fuzzy
 msgid "New VM"
-msgstr "<b>Сеть</b>"
+msgstr "Новая VM"
 
 #: ../src/vmm-create.glade.h:32
-#, fuzzy
 msgid "OS _type:"
 msgstr "_Тип ОС:"
 
@@ -3239,33 +3226,29 @@ msgid "<b>Autostart</b>"
 msgstr "<b>Автозапуск</b>"
 
 #: ../src/vmm-details.glade.h:4
-#, fuzzy
 msgid "<b>Basic Details</b>"
-msgstr "<b>Основные детали</b>"
+msgstr "<b>Основные Детали</b>"
 
 #: ../src/vmm-details.glade.h:5
-#, fuzzy
 msgid "<b>Boot Device</b>"
-msgstr "<b>Консоли</b>"
+msgstr "<b>Устройства Загрузки</b>"
 
 #: ../src/vmm-details.glade.h:6
 #, fuzzy
 msgid "<b>CPU Pinning</b>"
-msgstr "<b>Процессоры</b>"
+msgstr "<b>CPU Пининг</b>"
 
 #: ../src/vmm-details.glade.h:7
 msgid "<b>CPUs</b>"
 msgstr "<b>Процессоры</b>"
 
 #: ../src/vmm-details.glade.h:8
-#, fuzzy
 msgid "<b>Hypervisor Details</b>"
-msgstr "Гипервизор:"
+msgstr "<b>Детали Гипервизора</b>"
 
 #: ../src/vmm-details.glade.h:9
-#, fuzzy
 msgid "<b>Machine Settings</b>"
-msgstr "<b>Основные детали</b>"
+msgstr "<b>Настройки Машины</b>"
 
 #: ../src/vmm-details.glade.h:10
 msgid "<b>Memory</b>"
@@ -3276,9 +3259,8 @@ msgid "<b>Performance</b>"
 msgstr "<b>Производительность</b>"
 
 #: ../src/vmm-details.glade.h:12
-#, fuzzy
 msgid "<b>Security</b>"
-msgstr "<b>Сводка</b>"
+msgstr "<b>Безопасность</b>"
 
 #: ../src/vmm-details.glade.h:14
 msgid "<b>The console is currently unavailable</b>"
@@ -3293,29 +3275,31 @@ msgstr ""
 "'приемник' - к информации гостевой ОС"
 
 #: ../src/vmm-details.glade.h:16
+#, fuzzy
 msgid ""
 "<b>Tip:</b> A graphics tablet configured as the default pointer in the guest "
 "OS will ensure that the virtual cursor moves in sync with the local desktop "
 "cursor."
 msgstr ""
+"<b>Совет:</b> A graphics tablet configured as the default pointer in the "
+"guest OS will ensure that the virtual cursor moves in sync with the local "
+"desktop cursor."
 
 #: ../src/vmm-details.glade.h:17
 msgid "<b>Virtual Disk</b>"
 msgstr "<b>Виртуальный диск</b>"
 
 #: ../src/vmm-details.glade.h:18
-#, fuzzy
 msgid "<b>Virtual Display</b>"
-msgstr "<b>Виртуальный диск</b>"
+msgstr "<b>Виртуальный Дисплей</b>"
 
 #: ../src/vmm-details.glade.h:19
 msgid "<b>Virtual Network Interface</b>"
-msgstr "<b>Виртуальный сетевой интерфейс</b>"
+msgstr "<b>Виртуальный Сетевой Интерфейс</b>"
 
 #: ../src/vmm-details.glade.h:20
-#, fuzzy
 msgid "<b>Virtual Pointer</b>"
-msgstr "<b>Виртуальный диск</b>"
+msgstr "<b>Виртуальный Указатель</b>"
 
 #: ../src/vmm-details.glade.h:21
 #, fuzzy
@@ -3323,9 +3307,8 @@ msgid "<b>insert type</b>"
 msgstr "<b>Консоли</b>"
 
 #: ../src/vmm-details.glade.h:22
-#, fuzzy
 msgid "A_dd Hardware"
-msgstr "Оборудование"
+msgstr "Д_обавить Оборудование"
 
 #: ../src/vmm-details.glade.h:24 ../src/vmm-host.glade.h:11
 msgid "Architecture:"
@@ -3349,12 +3332,11 @@ msgstr ""
 
 #: ../src/vmm-details.glade.h:29
 msgid "C_lock Offset:"
-msgstr ""
+msgstr "Ч_асовые параметры:"
 
 #: ../src/vmm-details.glade.h:30
-#, fuzzy
 msgid "Change a_llocation:"
-msgstr "Изменить назначение:"
+msgstr "Изменить вы_деление:"
 
 #: ../src/vmm-details.glade.h:31
 msgid "Char"
@@ -3375,7 +3357,7 @@ msgstr "Текущее выделение:"
 
 #: ../src/vmm-details.glade.h:35
 msgid "D_ynamic"
-msgstr ""
+msgstr "Д_инамический"
 
 #: ../src/vmm-details.glade.h:37
 msgid "Device Model:"
@@ -3390,20 +3372,20 @@ msgid "Device model:"
 msgstr "Модель устройства:"
 
 #: ../src/vmm-details.glade.h:40
-#, fuzzy
 msgid "Device virtual machine will _boot from:"
-msgstr "Сохранить снимок экрана виртуальной машины"
+msgstr "Устройство с которого будет _запускаться виртуальная машина:"
 
 #: ../src/vmm-details.glade.h:42
 msgid "Disk"
 msgstr "Диск"
 
 #: ../src/vmm-details.glade.h:43
-#, fuzzy
 msgid ""
 "Disk\n"
 "I/O:"
-msgstr "Диск"
+msgstr ""
+"Дисковый\n"
+"В/В:"
 
 #: ../src/vmm-details.glade.h:45
 msgid "Emulator:"
@@ -3415,16 +3397,15 @@ msgstr "Включить A_CPI:"
 
 #: ../src/vmm-details.glade.h:47
 msgid "Enable A_PIC:"
-msgstr ""
+msgstr "Включить A_PIC:"
 
 #: ../src/vmm-details.glade.h:48
 msgid "Heads:"
 msgstr ""
 
 #: ../src/vmm-details.glade.h:49
-#, fuzzy
 msgid "Host CPUs:"
-msgstr "VCPU"
+msgstr "CPUs хоста:"
 
 #: ../src/vmm-details.glade.h:50 ../src/vmm-host.glade.h:22
 msgid "Hypervisor:"
@@ -3435,9 +3416,8 @@ msgid "Initial _pinning:"
 msgstr ""
 
 #: ../src/vmm-details.glade.h:56
-#, fuzzy
 msgid "M_odel:"
-msgstr "Устройство:"
+msgstr "М_одель:"
 
 #: ../src/vmm-details.glade.h:57
 msgid "Ma_ximum allocation:"
@@ -3457,11 +3437,12 @@ msgid "Mem"
 msgstr "Память"
 
 #: ../src/vmm-details.glade.h:61
-#, fuzzy
 msgid ""
 "Memory\n"
 "usage:"
-msgstr "Использование памяти:"
+msgstr ""
+"Использование\n"
+"памяти:"
 
 #: ../src/vmm-details.glade.h:63
 #, fuzzy
@@ -3478,11 +3459,12 @@ msgid "Net"
 msgstr "Сеть"
 
 #: ../src/vmm-details.glade.h:67
-#, fuzzy
 msgid ""
 "Network\n"
 "I/O:"
-msgstr "Сеть:"
+msgstr ""
+"Сетевой\n"
+"В/В:"
 
 #: ../src/vmm-details.glade.h:69
 #, fuzzy
@@ -3571,9 +3553,8 @@ msgid "Source path:"
 msgstr "Путь источника:"
 
 #: ../src/vmm-details.glade.h:91
-#, fuzzy
 msgid "Start virt_ual machine on host boot up"
-msgstr "Сохранить снимок экрана виртуальной машины"
+msgstr "Запускать вирт_уальную машину при включении хоста"
 
 #: ../src/vmm-details.glade.h:92 ../src/vmm-preferences.glade.h:27
 #, fuzzy
@@ -3594,9 +3575,8 @@ msgid "Target device:"
 msgstr "Целевое устройство:"
 
 #: ../src/vmm-details.glade.h:97
-#, fuzzy
 msgid "Total host memory:"
-msgstr "Исходная память:"
+msgstr "Всего памяти на хосте:"
 
 #: ../src/vmm-details.glade.h:99
 msgid "UUID:"
@@ -3663,9 +3643,8 @@ msgid "_Help"
 msgstr "_Помощь"
 
 #: ../src/vmm-details.glade.h:115
-#, fuzzy
 msgid "_Label:"
-msgstr "Название:"
+msgstr "_Метка:"
 
 #: ../src/vmm-details.glade.h:116
 #, fuzzy
@@ -3705,32 +3684,28 @@ msgid "_Scale Display"
 msgstr ""
 
 #: ../src/vmm-details.glade.h:128
-#, fuzzy
 msgid "_Static"
-msgstr "Состояние"
+msgstr "_Статический"
 
 #: ../src/vmm-details.glade.h:129
 msgid "_Take Screenshot"
-msgstr "_Сделать снимок"
+msgstr "_Сделать Снимок"
 
 #: ../src/vmm-details.glade.h:130
-#, fuzzy
 msgid "_Text Consoles"
-msgstr "Последовательная _консоль:"
+msgstr "_Текстовая Консоль"
 
 #: ../src/vmm-details.glade.h:131
-#, fuzzy
 msgid "_Username:"
-msgstr "Хост:"
+msgstr "_Имя пользователя:"
 
 #: ../src/vmm-details.glade.h:132 ../src/vmm-manager.glade.h:21
 msgid "_View"
 msgstr "_Вид"
 
 #: ../src/vmm-details.glade.h:133 ../src/vmm-host.glade.h:46
-#, fuzzy
 msgid "_View Manager"
-msgstr "Менеджер вирт.машины"
+msgstr "_Менеджер виртуальных машин"
 
 #: ../src/vmm-host.glade.h:1
 msgid "<b>Basic details</b>"
@@ -3743,7 +3718,7 @@ msgstr "<b>Конфигурация IPv4</b>"
 #: ../src/vmm-host.glade.h:3
 #, fuzzy
 msgid "<b>Name:</b>"
-msgstr "<b>Хранилище</b>"
+msgstr "<b>НазваниеЖ</b>"
 
 #: ../src/vmm-host.glade.h:5
 #, fuzzy
@@ -3751,32 +3726,29 @@ msgid "<b>Volumes</b>"
 msgstr "<b>Консоли</b>"
 
 #: ../src/vmm-host.glade.h:6 ../src/vmm-open-connection.glade.h:1
-#, fuzzy
 msgid "A_utoconnect:"
-msgstr "Тип соединения:"
+msgstr "А_втоподключение:"
 
 #: ../src/vmm-host.glade.h:7
-#, fuzzy
 msgid "A_utostart:"
-msgstr "Автозапуск:"
+msgstr "А_втозапуск:"
 
 #: ../src/vmm-host.glade.h:9
-#, fuzzy
 msgid "Add Network"
-msgstr "Сеть"
+msgstr "Добавить Сеть"
 
 #: ../src/vmm-host.glade.h:10
+#, fuzzy
 msgid "Add Pool"
-msgstr ""
+msgstr "Добавить Пул"
 
 #: ../src/vmm-host.glade.h:12
 msgid "CPU usage:"
 msgstr "Использование CPU:"
 
 #: ../src/vmm-host.glade.h:13
-#, fuzzy
 msgid "Connection:"
-msgstr "Тип соединения:"
+msgstr "Подключение:"
 
 #: ../src/vmm-host.glade.h:14
 msgid "DHCP end:"
@@ -3791,8 +3763,9 @@ msgid "Delete Network"
 msgstr "Удалить Сеть"
 
 #: ../src/vmm-host.glade.h:17
+#, fuzzy
 msgid "Delete Pool"
-msgstr ""
+msgstr "Удалить Пул"
 
 #: ../src/vmm-host.glade.h:19
 msgid "Forwarding:"
@@ -3838,26 +3811,24 @@ msgstr "Обзор"
 #: ../src/vmm-host.glade.h:33
 #, fuzzy
 msgid "Pool Type:"
-msgstr "Тип:"
+msgstr "Тип Пула:"
 
 #: ../src/vmm-host.glade.h:34
-#, fuzzy
 msgid "Start Network"
-msgstr "Запуск Сети"
+msgstr "Запустить Сеть"
 
 #: ../src/vmm-host.glade.h:35
 #, fuzzy
 msgid "Start Pool"
-msgstr "Накопители"
+msgstr "Старт Пул"
 
 #: ../src/vmm-host.glade.h:36
 msgid "State:"
 msgstr "Состояние:"
 
 #: ../src/vmm-host.glade.h:37
-#, fuzzy
 msgid "Stop Network"
-msgstr "Сеть"
+msgstr "Остановить Сеть"
 
 #: ../src/vmm-host.glade.h:38
 #, fuzzy
@@ -4021,20 +3992,23 @@ msgid ""
 "Remote SSL/TLS with x509 certificate\n"
 "Remote tunnel over SSH"
 msgstr ""
+"Локально\n"
+"Удаленно через Пароль или Kerberos\n"
+"Удаленно через SSL/TLS с помощью x509 сертификата\n"
+"Удаленно через SSH тунерль"
 
 #: ../src/vmm-open-connection.glade.h:13
-#, fuzzy
 msgid ""
 "Xen\n"
 "QEMU/KVM"
 msgstr ""
 "Xen\n"
-"QEMU"
+"QEMU/KVM"
 
 #: ../src/vmm-open-connection.glade.h:15
 #, fuzzy
 msgid "_Hypervisor:"
-msgstr "Гипервизор:"
+msgstr "_Гипервизор:"
 
 #: ../src/vmm-preferences.glade.h:1
 #, fuzzy
@@ -4053,17 +4027,16 @@ msgstr "<b>Мониторинг состояния</b>"
 #: ../src/vmm-preferences.glade.h:4
 #, fuzzy
 msgid "<b>General</b>"
-msgstr "<b>Консоли</b>"
+msgstr "<b>Общие</b>"
 
 #: ../src/vmm-preferences.glade.h:5
-#, fuzzy
 msgid "<b>New VM</b>"
-msgstr "<b>Сеть</b>"
+msgstr "<b>Новая VM</b>"
 
 #: ../src/vmm-preferences.glade.h:6
 #, fuzzy
 msgid "<b>Stats Options</b>"
-msgstr "<b>Мониторинг состояния</b>"
+msgstr "<b>Параметры Статистики</b>"
 
 #: ../src/vmm-preferences.glade.h:7
 #, fuzzy
@@ -4076,16 +4049,18 @@ msgid "Device re_moval:"
 msgstr "Устройство:"
 
 #: ../src/vmm-preferences.glade.h:9
+#, fuzzy
 msgid "Enable _system tray icon"
-msgstr ""
+msgstr "Включить иконку в _области уведомления"
 
 #: ../src/vmm-preferences.glade.h:10
 msgid "Feedback"
 msgstr ""
 
 #: ../src/vmm-preferences.glade.h:11
+#, fuzzy
 msgid "General"
-msgstr ""
+msgstr "Общие"
 
 #: ../src/vmm-preferences.glade.h:12
 #, fuzzy
@@ -4107,14 +4082,13 @@ msgid "Maintain h_istory of"
 msgstr "Хранить историю "
 
 #: ../src/vmm-preferences.glade.h:16
-#, fuzzy
 msgid ""
 "Never\n"
 "For all new domains\n"
 "For all domains"
 msgstr ""
 "Никогда\n"
-"Для некоторых доменов\n"
+"Для все новых доменов\n"
 "Для всех доменов"
 
 #: ../src/vmm-preferences.glade.h:19
@@ -4123,6 +4097,9 @@ msgid ""
 "Fullscreen only\n"
 "Always"
 msgstr ""
+"Никогда\n"
+"Только в полноэкранном режиме\n"
+"Всегда"
 
 #: ../src/vmm-preferences.glade.h:22
 msgid ""
@@ -4143,23 +4120,20 @@ msgid "Preferences"
 msgstr "Настройки"
 
 #: ../src/vmm-preferences.glade.h:28
-#, fuzzy
 msgid "VM Details"
-msgstr "Подробности"
+msgstr "Подробности VM"
 
 #: ../src/vmm-preferences.glade.h:30
 msgid "_Force Poweroff:"
 msgstr ""
 
 #: ../src/vmm-preferences.glade.h:31
-#, fuzzy
 msgid "_Local virtual machine"
-msgstr "Виртуальная машина сохраняется"
+msgstr "_Локальная виртуальная машина"
 
 #: ../src/vmm-preferences.glade.h:33
-#, fuzzy
 msgid "_Pause:"
-msgstr "_Пауза"
+msgstr "_Пауза:"
 
 #: ../src/vmm-preferences.glade.h:34
 #, fuzzy
